cortex/k8s-cortex/querier-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: querier
spec:
  replicas: 1
  selector:
    matchLabels:
      name: querier
  template:
    metadata:
      labels:
        name: querier
    spec:
      containers:
      - name: querier
        image: quay.io/cortexproject/cortex:v1.9.0
        imagePullPolicy: IfNotPresent
        args:
        - -target=querier
        - -server.http-listen-port=80
        - -consul.hostname=consul.monitoring.svc.cluster.local:8500
        - -s3.url=s3://admin:admin2675@172.31.14.138:9000/monitoring
        - -s3.force-path-style=true
        - -dynamodb.url=dynamodb://user:pass@dynamodb.monitoring.svc.cluster.local:8000
        - -schema-config-file=/etc/cortex/schema.yaml
        - -querier.frontend-address=query-frontend.monitoring.svc.cluster.local:9095
        - -store.chunks-cache.memcached.hostname=memcached.monitoring.svc.cluster.local
        - -store.chunks-cache.memcached.timeout=100ms
        - -store.chunks-cache.memcached.service=memcached
        - -distributor.replication-factor=1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/cortex
      volumes:
        - name: config-volume
          configMap:
            name: schema-config
