cortex/k8s-cortex/cortex-configs-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configs-db
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      name: configs-db
  template:
    metadata:
      labels:
        name: configs-db
      annotations:
        prometheus.io.scrape: "false"
    spec:
      containers:
      - name: configs-db
        image: postgres:9.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: configs-db
  namespace: monitoring
spec:
  ports:
    - port: 5432
  selector:
    name: configs-db
