cortex/k8s-cortex/cortex-distributor.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: distributor
spec:
  replicas: 1
  selector:
    matchLabels:
      name: distributor
  template:
    metadata:
      labels:
        name: distributor
    spec:
      containers:
      - name: distributor
        image: quay.io/cortexproject/cortex:v1.9.0
        imagePullPolicy: IfNotPresent
        args:
        - -target=distributor
        - -log.level=debug
        - -server.http-listen-port=80
        - -consul.hostname=consul.monitoring.svc.cluster.local:8500
        - -distributor.replication-factor=1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: distributor
spec:
  ports:
    - port: 80
  selector:
    name: distributor
