cortex/k8s-cortex/cortex-query-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: query-frontend
  template:
    metadata:
      labels:
        name: query-frontend
    spec:
      containers:
      - name: query-frontend
        image: quay.io/cortexproject/cortex:v1.9.0
        imagePullPolicy: IfNotPresent
        args:
        - -target=query-frontend
        - -log.level=debug
        - -server.http-listen-port=80
        - -server.grpc-listen-port=9095
        ports:
        - containerPort: 9095
          name: grpc
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: query-frontend
spec:
  # clusterIP: None gives a "headless" service so DNS returns all endpoints.
  clusterIP: None
  ports:
    - port: 9095
      name: grpc
    - port: 80
      name: http
  selector:
    name: query-frontend
