cortex/k8s-cortex/nginx-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - name: http
    port: 80
  selector:
    name: nginx
