cortex/k8s-cortex/ingress-cortex-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cortex-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: nginx.172.31.14.138.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
